sass, responsive design, herecnia person

--- a/angular.json
+++ b/angular.json
@@ -23,14 +23,15 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "src/styles.scss",
               "node_modules/materialize-css/dist/css/materialize.min.css",
               "node_modules/@mdi/font/css/materialdesignicons.min.css"
             ],
-            "scripts": ["node_modules/jquery/dist/jquery.min.js",
-                        "node_modules/materialize-css/dist/js/materialize.min.js"],
-            "es5BrowserSupport": true,
-
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/materialize-css/dist/js/materialize.min.js"
+            ],
+            "es5BrowserSupport": true
           },
           "configurations": {
             "production": {
@@ -84,7 +85,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.css",
+              "src/styles.scss",
               "node_modules/materialize-css/dist/css/materialize.min.css"
             ],
             "scripts": [],
@@ -137,5 +138,10 @@
       }
     }
   },
-  "defaultProject": "gourmetDelivery"
+  "defaultProject": "gourmetDelivery",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
