--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@angular/animation": "^4.0.0-beta.8",
     "@angular/animations": "^7.2.9",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -25,6 +26,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.9.3",
     "ngx-materialize": "^6.1.3",
+    "node-sass": "^4.10.0",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
